--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,16 @@ name = "newsletter"
 [dependencies]
 config = "0.14"
 actix-web = "4"
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
+secrecy = { version = "0.8", features = ["serde"] }
+tracing-actix-web = "0.7"
 
 [dependencies.sqlx]
 version = "0.8"
