--- a/.github/workflows/general.yaml
+++ b/.github/workflows/general.yaml
@@ -52,7 +52,7 @@ jobs:
           PGPASSWORD="password" psql -U "postgres" -h "localhost" -c "${GRANT_QUERY}"
 
       - name: Migrate database
-        run: SKIP_DOCKER=true ./scripts/init_db.sh
+        run: SKIP_PODMAN=true ./scripts/init_db.sh
 
       - name: Run tests
         run: cargo test
@@ -127,7 +127,7 @@ jobs:
           PGPASSWORD="password" psql -U "postgres" -h "localhost" -c "${GRANT_QUERY}"
 
       - name: Migrate database
-        run: SKIP_DOCKER=true ./scripts/init_db.sh
+        run: SKIP_PODMAN=true ./scripts/init_db.sh
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
