--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.7"
+serde-aux = "4"
 
 [dependencies.sqlx]
 version = "0.8"
