--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.7"
 serde-aux = "4"
+unicode-segmentation = "1"
+claims = "0.7"
+validator = "0.18"
 
 [dependencies.sqlx]
 version = "0.8"
@@ -42,3 +45,7 @@ rustflags = ["-C", "link-arg=-fuse-ld=lld"]
 
 [dev-dependencies]
 reqwest = "0.12.22"
+fake = "2.9"
+quickcheck = "1.0.3"
+quickcheck_macros = "1"
+rand = "0.8"
