--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,12 +40,19 @@ features = [
   "migrate"
 ]
 
-[target.x86_64-pc-windows-msvc]
-rustflags = ["-C", "link-arg=-fuse-ld=lld"]
+[dependencies.reqwest]
+version = "0.12"
+default-features = false
+features = ["json", "rustls-tls"]
 
 [dev-dependencies]
-reqwest = "0.12.22"
 fake = "2.9"
 quickcheck = "1.0.3"
 quickcheck_macros = "1"
 rand = "0.8"
+tokio = { version = "1", features = ["rt", "macros"] }
+wiremock = "0.6"
+serde_json = "1"
+
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
