--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde-aux = "4"
 unicode-segmentation = "1"
 claims = "0.7"
 validator = "0.18"
+rand = { version = "0.8", features = ["std_rng"] }
 
 [dependencies.sqlx]
 version = "0.8"
@@ -49,10 +50,10 @@ features = ["json", "rustls-tls"]
 fake = "2.9"
 quickcheck = "1.0.3"
 quickcheck_macros = "1"
-rand = "0.8"
 tokio = { version = "1", features = ["rt", "macros"] }
 wiremock = "0.6"
 serde_json = "1"
+linkify = "0.10"
 
 [target.x86_64-pc-windows-msvc]
 rustflags = ["-C", "link-arg=-fuse-ld=lld"]
