--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ htmlescape = "0.3"
 hmac = { version = "0.12", features = ["std"] }
 sha2 = "0.10"
 hex = "0.4"
+actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
 
 [dependencies.sqlx]
 version = "0.8"
@@ -53,7 +54,7 @@ features = [
 [dependencies.reqwest]
 version = "0.12"
 default-features = false
-features = ["json", "rustls-tls"]
+features = ["json", "rustls-tls", "cookies"]
 
 [dev-dependencies]
 fake = "2.9"
