--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ tracing-bunyan-formatter = "0.3"
 tracing-log = "0.2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"]}
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 secrecy = { version = "0.8", features = ["serde"] }
 tracing-actix-web = "0.7"
@@ -38,6 +38,8 @@ hmac = { version = "0.12", features = ["std"] }
 sha2 = "0.10"
 hex = "0.4"
 actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
+actix-session = { version = "0.10", features = ["redis-session-rustls"] }
+serde_json = "1"
 
 [dependencies.sqlx]
 version = "0.8"
@@ -62,7 +64,6 @@ quickcheck = "1.0.3"
 quickcheck_macros = "1"
 tokio = { version = "1", features = ["rt", "macros"] }
 wiremock = "0.6"
-serde_json = "1"
 linkify = "0.10"
 
 [target.x86_64-pc-windows-msvc]
